refactor: refactored the product and the cloudinary services